--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 body {
-  @apply m-0;
+  @apply m-0 bg-slate-900;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
